# CTF

./: .gitignore  Cargo.toml  README.md  build.sh  ferox-google_com-1712206490.state  ferox-https_pornbox_com-1718245446.state  ferox-kaleido_ai-1712371959.state
config/: default.toml
output/: ferox-google.com.txt  ferox-ipfs.io.txt  ferox-ipfs_io-1711597846.state  ferox-ipfs_io-1711733385.state  ferox-remove.bg.txt  nmap-ipfs.io.txt
src/: ffuf.rs  fuzzing.rs  kronos.rs  main.rs  nmap.rs  subdenum.rs  utils.rs  whowhat.rs  zap.rs
