[package]
name = "pentest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.12"
indicatif = "0.17.8"
rayon = "1.10.0"
reqwest = {version="0.12.3", features = ["blocking"] }
tokio = {version="1.35.1",features = ["full"] }
