[package]
name = "pentest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
indicatif = "0.17.8"
rayon = "1.10.0"
reqwest = {version="0.12.3", features = ["blocking", "json"] }
serde_json = "1.0.127"
serde = { version = "1.0", features = ["derive"] }
tokio = {version="1.35.1",features = ["full"] }
toml = "0.8.19"
clap = { version = "3.0", features = ["derive"] }
cli-clipboard = "0.4.0"
